variables.RunFour.scala.error
Erreur de compilation :
RunFour:6: error: type mismatch;
 found   : Unit
 required: Boolean
if (x=4) {
     ^RunFour:7: error: not found: value fin
  fin;
  ^